--- a/templates/app/templates/main-body.html
+++ b/templates/app/templates/main-body.html
@@ -26,8 +26,7 @@
     <div class="row" alignment="true">
         <div class="col-md-8 col col-md-offset-2" alignment="true">
             <p>
-                <span class="dropCap">C</span>arson Wentz's odyssey from No. 2 draft pick to third-string quarterback to suddenly starter was marked by his moments of ingenuity, perhaps none as clever as discovering the ideal spot to nap.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc gravida, arcu sed dignissim vestibulum, risus sapien dignissim tortor, lobortis suscipit erat ante eget sapien. In gravida arcu a nulla dignissim, sit amet ullamcorper lorem consectetur.
+            <p><span class="dropCap">L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Nunc gravida, arcu sed dignissim vestibulum, risus sapien dignissim tortor, lobortis suscipit erat ante eget sapien. In gravida arcu a nulla dignissim, sit amet ullamcorper lorem consectetur.
                 nec at nunc. Nunc placerat placerat rhoncus. Donec vel luctus sem. Vivamus in nunc tellus. Quisque euismod quam nisl, in cursus ipsum pharetra ut. In ac ullamcorper nisl, sed aliquam nunc. Sed posuere bibendum rhoncus. Morbi nec efficitur
                 augue. Quisque gravida faucibus massa, sit amet convallis tortor eleifend nec.</p>
         </div>
