--- a/templates/app/templates/main-body.html
+++ b/templates/app/templates/main-body.html
@@ -17,6 +17,7 @@
         </div>
         <div class="byline">
             Jeff McLane / Staff Writer, <a href="mailto:jmclane@phillynews.com">jmclane@phillynews.com</a>
+            <div style="float:right;" class="custom-social-share" alignment="true">&nbsp;</div>
         </div>
         <div class="dateline">Pub date, Xxx. ##, 2016</div>
     </div>
