--- a/templates/app/scss/longform-styles.scss
+++ b/templates/app/scss/longform-styles.scss
@@ -81,6 +81,7 @@
 
     @media #{$mobile} {
       padding-top: 5px;
+      padding-bottom: 8px;
    }
 }
 
@@ -128,6 +129,10 @@
     overflow-x: hidden;
     overflow-y: auto;
     line-height: 2.25em;
+    clear:both;
+    @media #{$mobile} {
+      padding-top: 30px;
+    }
 }
 
 .bodyContainer {
