--- a/templates/app/templates/partials/script-links.html
+++ b/templates/app/templates/partials/script-links.html
@@ -1,3 +1,4 @@
 <script src="http://www.philly.com/includes/e32121b31e345f561b84372c2bf06282/jquery-2.0.0b2.js" type="text/javascript"></script>
 <script src="http://media.philly.com/storage/inquirer/Longform/Bootstrap/js/bootstrap.min.js"></script>
 <script src="http://media.philly.com/storage/inquirer/script/LongformBootstrapCarouselB.js"></script>
+<script src="http://media.philly.com/storage/inquirer/CustomShareTools/CustomShareToolsD.js"></script>
