--- a/templates/app/scss/philly-styles/values.scss
+++ b/templates/app/scss/philly-styles/values.scss
@@ -1,8 +1,8 @@
 $tablet: "only screen and (max-width : 800px)";
 $mobile: "only screen and (max-width : 480px)";
 
-$philly-sans: "Gotham Narrow", "Gotham Narrow SSm A", "Gotham Narrow SSm B", "Arial", sans-serif;
-$philly-serif: "Sentinel", "Sentinel SSm A","Sentinel SSm B",Times,"Times New Roman",serif;
+$philly-sans: "Gotham Narrow SSm A", "Gotham Narrow SSm B","Gotham Narrow",  "Arial", sans-serif;
+$philly-serif: "Sentinel SSm A","Sentinel SSm B","Sentinel", "Times New Roman",serif;
 
 $philly-red: #c00;
 $philly-blue: #0061A2;
