--- a/templates/app/templates/shell/bootstrap-templates.html
+++ b/templates/app/templates/shell/bootstrap-templates.html
@@ -1,3 +1,33 @@
+-- Ad
+
+<div class="adUnitWrapper containerMedia containerInsertRight" alignment="true">
+<div class="adUnit" alignment="true">
+<div id="div-gpt-ad-mrec-21" alignment="true"><script alignment="true" type="text/javascript">// <![CDATA[
+   	 	cX.callQueue.push(['invoke', function() {
+                        googletag.cmd.push(function() {
+                            googletag.display('div-gpt-ad-mrec-21');
+                        });
+		}]);
+// ]]></script></div>
+</div>
+</div>
+
+
+-- Ad number 2
+
+<div class="adUnitWrapper containerMedia containerInsertRight" alignment="true">
+<div class="adUnit" alignment="true">
+<div id="div-gpt-ad-mrec-22" alignment="true"><script alignment="true" type="text/javascript">// <![CDATA[
+   	 	cX.callQueue.push(['invoke', function() {
+                        googletag.cmd.push(function() {
+                            googletag.display('div-gpt-ad-mrec-22');
+                        });
+		}]);
+// ]]></script></div>
+</div>
+</div>
+
+
 <!--full page width-->
 <div class="container-fluid">
     <img src="" width="100%" />
